@@ -20,20 +20,22 @@
 Source code is available 
 
 <ul>
-  <li>By FTP/HTTP from
+  <li>By HTTP from
 
     <ul><li>
 	<a href="http://lilypond.org/download/">
-	  http://lilypond.org/download/
+	  lilypond.org
 	</a>
       <li>
-	<a href="ftp://sca.uwaterloo.ca/pub/">tp://sca.uwaterloo.ca/pub/</a>
+     <a href="http://sca.uwaterloo.ca/lilypond/lilypond.org/download/">
+      sca.uwaterloo.ca</a>
     </ul>
 
     <a href="http://savannah.gnu.org/">
-      <img align="right" src="@IMAGES@floating.png" alt="savannah.gnu.org"></a>
+      <img align="right" src="@IMAGES@floating.png"
+      alt="savannah.gnu.org"></a>
+      
   <li>
-
     By CVS from
     <a href="http://savannah.gnu.org/cvs/?group=lilypond">savannah.gnu.org</a>
     <pre>
